@@ -28,7 +28,10 @@ version ? (????-??-??):
   - few improvements in customer groups (alec)
   - nodelist: we can filter nodes by node groups (chilan)
   - added searching customers and printing customers list by nodes group (alec)
+  - quicksearch: fixed uninitialized $cslk value causing errors during
+    customer search (chilan)
   - lmsd/hostfile: added 'nodegroups' option (alec)
+  - nodegroups: added prio field - we will be able to set nodegroups order (chilan)
 
 version 1.11.1 Talus (2007-12-03):
 
